page/detail routing is now handled by new code, CXEplugin in beta mode; now want to change how details are positioned in HTML

--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@ end of TO DO LIST -->
 
 			<div class="detail_1">
 
-				<div id="creative" class="detail font_oswald">
+				<div id="creative" class="detail font_oswald" data-page-id="page1">
 					CXElegance is about being creative.
 					<p>Tailored solutions are not found on the Internet; they are dreamed of, desired, planned, designed...</p>
 					<p>...and then the Internet shows us many methods of actualizing our dreams.</p>
@@ -882,7 +882,7 @@ end of TO DO LIST -->
 
 			<div class="detail_2">
 
-				<div id="fun" class="detail">
+				<div id="fun" class="detail" data-page-id="page1">
 					CXElegance is about fun.
 					<p>Is it okay to have fun in business?  Yes!  Let's aim for quality in our lives, and good healthy energy - at home, at play, at work.</p>
 					<p>Let's enjoy the experience!</p>
@@ -892,7 +892,7 @@ end of TO DO LIST -->
 
 			<div class="detail_3">
 
-				<div id="reliable" class="detail">
+				<div id="reliable" class="detail" data-page-id="page1">
 					CXElegance is reliable.
 					<p>You can count on CXElegance to be honest, forthcoming, and specific about what is possible and what is expected.</p>
 				</div>
@@ -901,7 +901,7 @@ end of TO DO LIST -->
 
 			<div class="detail_4">
 
-				<div id="proactive" class="detail">
+				<div id="proactive" class="detail" data-page-id="page1">
 					CXElegance is proactive.
 					<p>If it's foreseeable, then let's address it now!</p>
 					<p>If it's a concern, then let's discuss and consider it.</p>
@@ -912,7 +912,7 @@ end of TO DO LIST -->
 
 			<div class="detail_5">
 
-				<div id="cx" class="detail">
+				<div id="cx" class="detail" data-page-id="page1">
 					Break it down: CX
 					<p>You, the Client, are entitled to a great eXperience in your business interactions.</p>
 					<p>Your expectations, in terms of communication, deliverables and more, shall be met or exceeded... but is this enough?</p>
@@ -925,7 +925,7 @@ end of TO DO LIST -->
 
 			<div class="detail_6">
 
-				<div id="bio" class="detail">
+				<div id="bio" class="detail" data-page-id="page1">
 					CXElegance is a fellow named Jesse.
 					<p>Jesse had to learn to compromise some of his ideals in life so that he could get on with actual living.  The good living, the kind that we are all entitled to!  He wanted things to be always top-notch, excellent, perfect... but this is not how life is.</p>
 					<p>The result is that Jesse understands and lives with things like "quality vs quantity", "we all have to start somewhere", "make a decision - now", "patience, persistence, perseverance", "you are what you do", and "just do it, just be it".</p>
@@ -939,7 +939,7 @@ end of TO DO LIST -->
 
 			<div class="detail_7">
 
-				<div id="services" class="detail">
+				<div id="services" class="detail" data-page-id="page1">
 					Perhaps CXElegance can assist you?  See below for past clients.
 					<p>Target clients:</p>
 					<ul>
@@ -988,7 +988,7 @@ end of TO DO LIST -->
 
 			<div class="detail_8">
 
-				<div id="contact" class="detail">
+				<div id="contact" class="detail" data-page-id="page1">
 					CXElegance is physically located at a home office in Wellington, New Zealand.
 					<ul>
 						<li>Phone: +1 253 802 0384 (North America, voicemail)</li>
@@ -1001,7 +1001,7 @@ end of TO DO LIST -->
 
 			<div class="detail_9">
 
-				<div id="toolkit" class="detail">
+				<div id="toolkit" class="detail" data-page-id="page1">
 					CXElegance relies on these tools, among others:
 					<ul>
 						<li>HTML</li>
@@ -1025,7 +1025,7 @@ end of TO DO LIST -->
 
 			<div class="detail_1">
 
-				<div id="testimonial1" class="detail">
+				<div id="testimonial1" class="detail" data-page-id="page2">
 					<div class="testimonial_detail">
 						<div>Marzio Manderioli</div>
 						<div>www.cartoonsbymarzio.com</div>
@@ -1039,7 +1039,7 @@ end of TO DO LIST -->
 
 			<div class="detail_2">
 
-				<div id="testimonial2" class="detail testimonial_detail">
+				<div id="testimonial2" class="detail testimonial_detail" data-page-id="page2">
 					<div class="testimonial_detail">
 						<div>Aaron</div>
 						<div>www.aaronburgess.co.nz/blog</div>
@@ -1053,7 +1053,7 @@ end of TO DO LIST -->
 
 			<div class="detail_3">
 
-				<div id="testimonial3" class="detail testimonial_detail">
+				<div id="testimonial3" class="detail testimonial_detail" data-page-id="page2">
 					<div class="testimonial_detail">
 						<div>Ana Sanz</div>
 						<div>www.anixstudio.net</div>
@@ -1067,7 +1067,7 @@ end of TO DO LIST -->
 
 			<div class="detail_4">
 
-				<div id="testimonial4" class="detail testimonial_detail">
+				<div id="testimonial4" class="detail testimonial_detail" data-page-id="page2">
 					<div class="testimonial_detail">
 						<div>Jesse</div>
 						<div>www.cxelegance.com</div>
@@ -1085,7 +1085,7 @@ end of TO DO LIST -->
 
 			<div class="detail_1">
 
-				<div id="resume1" class="detail">
+				<div id="resume1" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Jan 2009 - now</div>
 						<div>Web Developer & Technical Dude</div>
@@ -1103,7 +1103,7 @@ end of TO DO LIST -->
 
 			<div class="detail_2">
 
-				<div id="resume2" class="detail">
+				<div id="resume2" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Sep 2010 - May 2011</div>
 						<div>System Analyst</div>
@@ -1121,7 +1121,7 @@ end of TO DO LIST -->
 
 			<div class="detail_3">
 
-				<div id="resume3" class="detail">
+				<div id="resume3" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Jul 2009 - May 2011</div>
 						<div>Customer Service Team Member</div>
@@ -1139,7 +1139,7 @@ end of TO DO LIST -->
 
 			<div class="detail_4">
 
-				<div id="resume4" class="detail">
+				<div id="resume4" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Dec 2007 - Dec 2008</div>
 						<div>Call Analyst</div>
@@ -1157,7 +1157,7 @@ end of TO DO LIST -->
 
 			<div class="detail_5">
 
-				<div id="resume5" class="detail">
+				<div id="resume5" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>May - Sep 2007</div>
 						<div>2nd Level Analyst</div>
@@ -1175,7 +1175,7 @@ end of TO DO LIST -->
 
 			<div class="detail_6">
 
-				<div id="resume6" class="detail">
+				<div id="resume6" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Mar - May 2007</div>
 						<div>1st Level Analyst</div>
@@ -1193,7 +1193,7 @@ end of TO DO LIST -->
 
 			<div class="detail_7">
 
-				<div id="resume7" class="detail">
+				<div id="resume7" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>May 2005 - Feb 2007</div>
 						<div>Traveller</div>
@@ -1211,7 +1211,7 @@ end of TO DO LIST -->
 
 			<div class="detail_8">
 
-				<div id="resume8" class="detail">
+				<div id="resume8" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Aug 2002 - Apr 2005</div>
 						<div>Technical Analyst</div>
@@ -1229,7 +1229,7 @@ end of TO DO LIST -->
 
 			<div class="detail_9">
 
-				<div id="resume9" class="detail">
+				<div id="resume9" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Feb - Apr 2002</div>
 						<div>Product Developer</div>
@@ -1247,7 +1247,7 @@ end of TO DO LIST -->
 
 			<div class="detail_10">
 
-				<div id="resume10" class="detail">
+				<div id="resume10" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>Jun - Sep 2001</div>
 						<div>Application Developer</div>
@@ -1265,7 +1265,7 @@ end of TO DO LIST -->
 
 			<div class="detail_11">
 
-				<div id="resume11" class="detail">
+				<div id="resume11" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>2000 - 2002</div>
 						<div>Photo Lab Technician</div>
@@ -1283,7 +1283,7 @@ end of TO DO LIST -->
 
 			<div class="detail_12">
 
-				<div id="resume12" class="detail">
+				<div id="resume12" class="detail" data-page-id="page3">
 					<div class="resume_detail">
 						<div>1995 - 2001</div>
 						<div>Sales Associate</div>
@@ -1305,7 +1305,7 @@ end of TO DO LIST -->
 
 			<div class="detail_1">
 
-				<div id="portfolio_1a" class="detail">
+				<div id="portfolio_1a" class="detail" data-page-id="page4">
 					Marzio needed a website to display his cartoons, without the clutter usually found on blogs (archive lists, tags and categories), and without the usual weblog format for displaying posts.
 				</div>
 
@@ -1313,7 +1313,7 @@ end of TO DO LIST -->
 
 			<div class="detail_2">
 
-				<div id="portfolio_1b" class="detail">
+				<div id="portfolio_1b" class="detail" data-page-id="page4">
 					Marzio was in Canada, I was in Buenos Aires; we communicated almost entirely via email - light, fun, positive emails.  I built up a small requirements document for him to comment on and approve; he was busy working full-time during this project.  I emailed him examples and prototypes and he asked for modifications when necessary.
 					<p>Marzio was anxious to get content loaded; I formatted and entered 30 cartoons for him while I tested my "add cartoon" functionality.  Our joint effort was very successful and enlightening!</p>
 					<p>I also gave Marzio some training via web conference so that he felt confident managing his content.  I was flexible across time differences so as to suit his narrow availability.  Long distance can be a total success!</p>
@@ -1323,7 +1323,7 @@ end of TO DO LIST -->
 
 			<div class="detail_3">
 
-				<div id="portfolio_1c" class="detail">
+				<div id="portfolio_1c" class="detail" data-page-id="page4">
 					A blog just didn't seem like the right solution.  So I made one, using simple things like XML.  I created simple classes for cartoons and cartoon lists, each of these classes were able to load/save data via PHP DOM XML, and they held and operated on their data in simple arrays.  With XML, the RSS feed was super easy.
 					<p>Marzio didn't need fancy in the back-end; I made very simple webpages for adding, modifying, deleting content.  And I bullet-proofed the system using JavaScript form/data checking before sending to PHP.</p>
 					<p>Also, I created some fun ways to navigate through the cartoon collection, while keeping the interface simple and uncluttered.</p>
@@ -1337,7 +1337,7 @@ end of TO DO LIST -->
 
 			<div class="detail_1">
 
-				<div id="portfolio_2a" class="detail">
+				<div id="portfolio_2a" class="detail" data-page-id="page5">
 					Aaron had a Flash site - I've touched Flash/Flex/Actionscript before, but we both knew he needed a more manageable solution.  A photographer needs a slick way to show current works, and we wanted something simple and in-theme with his existing site.
 				</div>
 
@@ -1345,7 +1345,7 @@ end of TO DO LIST -->
 
 			<div class="detail_2">
 
-				<div id="portfolio_2b" class="detail">
+				<div id="portfolio_2b" class="detail" data-page-id="page5">
 					I made myself very available to Aaron; he had a lot of ideas and desires for a solution; he likes to be involved and we enjoyed discussing the possibilities.  We had lunches, breakfasts, coffees, and I even joined him on a couple fun photoshoots.
 					<p>It was his project - Aaron ultimately designed the layout of his blog in Photoshop and I simply cut it up and programmed it.  We did some cross-browser testing and I tweaked it until we were both happy.</p>
 				</div>
@@ -1354,7 +1354,7 @@ end of TO DO LIST -->
 
 			<div class="detail_3">
 
-				<div id="portfolio_2c" class="detail">
+				<div id="portfolio_2c" class="detail" data-page-id="page5">
 					Thingamablog.  It was simple, worked across different operating systems on local machines, and did everything I needed it to.  Add a little JavaScript for some extra flavour, and voila!  A simple solution that Aaron can easily use.
 				</div>
 
@@ -1366,7 +1366,7 @@ end of TO DO LIST -->
 
 			<div class="detail_1">
 
-				<div id="portfolio_3a" class="detail">
+				<div id="portfolio_3a" class="detail" data-page-id="page6">
 					Kyle and Matt certainly weren't going to have time to keep this website up-to-date; a new business startup is a busy thing!  They needed the "video of the day" and "photo of the day" to be automated, and they knew it.  And I was the guy to ask, since I'd helped them many times before, with technical things and...  I even filmed the very first Bare Kiwi pilot episode!
 				</div>
 
@@ -1374,7 +1374,7 @@ end of TO DO LIST -->
 
 			<div class="detail_2">
 
-				<div id="portfolio_3b" class="detail">
+				<div id="portfolio_3b" class="detail" data-page-id="page6">
 					I was real busy.  I had two jobs; I was working 55 hours a week.  But it was important to me that Bare Kiwi was operating smoothly, including the new website they had just commissioned.  So in my evenings, I worked with Kyle and Matt on the phone and I came up with a quick slick solution.
 				</div>
 
@@ -1382,7 +1382,7 @@ end of TO DO LIST -->
 
 			<div class="detail_3">
 
-				<div id="portfolio_3c" class="detail">
+				<div id="portfolio_3c" class="detail" data-page-id="page6">
 					The videos were being published on Youtube; the photos on Facebook.  Youtube had an RSS feed, and I simply created a feed for the photos; something they could update maybe once a month (or whenever, really).  The key thing was the videos - I wrote some PHP functions to parse the feeds and voila!  A different video and a different photo each day... with text!
 				</div>
 
@@ -1394,7 +1394,7 @@ end of TO DO LIST -->
 
 			<div class="detail_1">
 
-				<div id="portfolio_4a" class="detail">
+				<div id="portfolio_4a" class="detail" data-page-id="page7">
 					I just wanted a decent website that shows what I do - and what I can do - while offering a neat-o user experience.
 				</div>
 
@@ -1402,7 +1402,7 @@ end of TO DO LIST -->
 
 			<div class="detail_2">
 
-				<div id="portfolio_4b" class="detail">
+				<div id="portfolio_4b" class="detail" data-page-id="page7">
 					Well, I can say that I was a pleasure to work with.  I wanted things to be grand but I let myself talk me into something simple yet cool.
 					<p>I went on many great walks to the plaza near where I was staying in Buenos Aires, and during those walks beautiful ideas and solutions came to me.  Then I'd get to work for a few hours, only to stop again and walk to get some delicious facturas (pastries)!</p>
 					<p>Life is good, enjoy it!</p>
@@ -1412,7 +1412,7 @@ end of TO DO LIST -->
 
 			<div class="detail_3">
 
-				<div id="portfolio_4c" class="detail">
+				<div id="portfolio_4c" class="detail" data-page-id="page7">
 					This is not the first page on the Internet to do this - but all the content is in one html file... how cool!  I used CSS to organize the data, and jQuery picks out the data as required, while animating the transitions to different sections.  If you took away all the jQuery and CSS, you'd see all the information in a simple, long page, and Google can index sections/links via hash tags.
 					<p>Oh, and this site displays reasonably well on all sizes, from mobile to big screen, with very little trickery - essentially just letting the browser wrap content to the next line when things get narrow!</p>
 				</div>
