index.html: links to github, linkedin

--- a/index.html
+++ b/index.html
@@ -106,6 +106,23 @@
 
 				</div>
 
+				<div id="row3" class="row centered bordered font_yanone">
+
+					<div class="hideable bordered row_spacer">
+					</div>
+					<a href="https://github.com/cxelegance" class="bordered row_content ">
+						<span class="linkstyle">&lt;</span>github<span class="linkstyle">&gt;</span>
+					</a>
+					<div class="hideable bordered row_spacer">
+					</div>
+					<a href="https://www.linkedin.com/in/cxelegance" class="bordered row_content hideable ">
+						<span class="linkstyle">&lt;</span>linkedin<span class="linkstyle">&gt;</span>
+					</a>
+					<div class="hideable bordered row_spacer">
+					</div>
+
+				</div>
+
 			</div>
 		</div>
 		<div class="details hidden">
